WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31121
WebInspector: Prevent crash when InspectorTimelineAgent is enabled/disabled: follow on to
bug 31080
https://bugs.webkit.org/show_bug.cgi?id=31121
Summary
WebInspector: Prevent crash when InspectorTimelineAgent is enabled/disabled: ...
Eric Ayers
Reported
2009-11-04 08:02:32 PST
This patch completes the work started by
bug 31080
to not save the timelineAgent pointer between beginning and ending an entry point.
Attachments
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch
(7.50 KB, patch)
2009-11-04 09:02 PST
,
Eric Ayers
timothy
: review-
Details
Formatted Diff
Diff
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch
(9.15 KB, patch)
2009-11-04 10:52 PST
,
Eric Ayers
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Ayers
Comment 1
2009-11-04 09:02:30 PST
Created
attachment 42488
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch
Pavel Feldman
Comment 2
2009-11-04 09:12:33 PST
Comment on
attachment 42488
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch DOMWindow.cpp has somewhat large copypaste. Please consider extracting method in one of your next patches.
WebKit Commit Bot
Comment 3
2009-11-04 09:25:35 PST
Comment on
attachment 42488
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch Rejecting patch 42488 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Last 500 characters of output: page/FrameView.cpp M WebCore/xml/XMLHttpRequest.cpp A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following files contain tab characters: trunk/WebCore/ChangeLog Please use spaces instead to indent. If you must commit a file with tabs, use svn propset to set the "allow-tabs" property. at /usr/local/libexec/git-core//git-svn line 469
Eric Seidel (no email)
Comment 4
2009-11-04 09:29:10 PST
We need to make some tool which knows how to warn contributors earlier than a pre-commit hook. :(
Timothy Hatcher
Comment 5
2009-11-04 09:34:37 PST
(In reply to
comment #4
)
> We need to make some tool which knows how to warn contributors earlier than a > pre-commit hook. :(
svn-create-patch? (Wont help the git users or direct users on svn diff.)
Timothy Hatcher
Comment 6
2009-11-04 09:36:36 PST
Comment on
attachment 42488
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch
> #if ENABLE(INSPECTOR) > + timelineAgent = InspectorTimelineAgent::retrieve(scriptExecutionContext()); > bool callTimelineAgentOnLoad = timelineAgent && hasEventListeners(eventNames().loadEvent);
Bad indentation here. Also remore the tabs from the ChangeLog.
Eric Ayers
Comment 7
2009-11-04 10:52:41 PST
Created
attachment 42494
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch Gets rid of tabs in Changelog, Fixes formatting in XMLHttpRequest.cpp Extracts some logic to a private method in DOMWindow.cpp
WebKit Commit Bot
Comment 8
2009-11-04 12:04:26 PST
Comment on
attachment 42494
[details]
WebInspector: Handle turning timeline profiling on/off in the middle of event dispatch Clearing flags on attachment: 42494 Committed
r50523
: <
http://trac.webkit.org/changeset/50523
>
WebKit Commit Bot
Comment 9
2009-11-04 12:04:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug