WebCore/page/DOMWindow.cpp
@@ -1302,6 +1302,13 @@ void DOMWindow::dispatchLoadEvent()
 #endif
 }
 
+InspectorTimelineAgent* DOMWindow::inspectorTimelineAgent() 
+{
+    if (frame() && frame()->page())
+        return frame()->page()->inspectorTimelineAgent();
+    return 0;
+}
+
 bool DOMWindow::dispatchEvent(PassRefPtr<Event> prpEvent, PassRefPtr<EventTarget> prpTarget)
 {
     RefPtr<EventTarget> protect = this;
@@ -1312,9 +1319,7 @@ bool DOMWindow::dispatchEvent(PassRefPtr<Event> prpEvent, PassRefPtr<EventTarget
     event->setEventPhase(Event::AT_TARGET);
 
 #if ENABLE(INSPECTOR)
-    InspectorTimelineAgent* timelineAgent = 0;
-    if (frame() && frame()->page())
-        timelineAgent = frame()->page()->inspectorTimelineAgent();
+    InspectorTimelineAgent* timelineAgent = inspectorTimelineAgent();
     bool timelineAgentIsActive = timelineAgent && hasEventListeners(event->type());
     if (timelineAgentIsActive)
         timelineAgent->willDispatchEvent(*event);
@@ -1323,8 +1328,11 @@ bool DOMWindow::dispatchEvent(PassRefPtr<Event> prpEvent, PassRefPtr<EventTarget
     bool result = fireEventListeners(event.get());
 
 #if ENABLE(INSPECTOR)
-    if (timelineAgentIsActive)
-        timelineAgent->didDispatchEvent();
+    if (timelineAgentIsActive) {
+      timelineAgent = inspectorTimelineAgent();
+      if (timelineAgent)
+            timelineAgent->didDispatchEvent();
+    }
 #endif
 
     return result;
