WebCore/xml/XMLHttpRequest.cpp
@@ -261,12 +261,13 @@ void XMLHttpRequest::callReadyStateChangeListener()
     dispatchEvent(XMLHttpRequestProgressEvent::create(eventNames().readystatechangeEvent));
 
 #if ENABLE(INSPECTOR)
-    if (callTimelineAgentOnReadyStateChange)
+    if (callTimelineAgentOnReadyStateChange && (timelineAgent = InspectorTimelineAgent::retrieve(scriptExecutionContext())))
         timelineAgent->didChangeXHRReadyState();
 #endif
 
     if (m_state == DONE && !m_error) {
 #if ENABLE(INSPECTOR)
+        timelineAgent = InspectorTimelineAgent::retrieve(scriptExecutionContext());
         bool callTimelineAgentOnLoad = timelineAgent && hasEventListeners(eventNames().loadEvent);
         if (callTimelineAgentOnLoad)
             timelineAgent->willLoadXHR(m_url.string());
@@ -275,7 +276,7 @@ void XMLHttpRequest::callReadyStateChangeListener()
         dispatchEvent(XMLHttpRequestProgressEvent::create(eventNames().loadEvent));
 
 #if ENABLE(INSPECTOR)
-        if (callTimelineAgentOnLoad)
+        if (callTimelineAgentOnLoad && (timelineAgent = InspectorTimelineAgent::retrieve(scriptExecutionContext())))
             timelineAgent->didLoadXHR();
 #endif
     }
